--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -14,26 +14,26 @@
 				float: right;
 				width: 67%;
 			}
-			
+
 			#select {
 				top: 6px;
 				height: 50px;
 				width: 100%;
 			}
-			
+
 			.selectStyle {
 				margin: 0;
 			}
-			
+
 			.puSearchBtn {
 				margin: 60px auto;
 				width: 80%;
 			}
-			
+
 			.suppChoice {
 				padding: 5px;
 			}
-			
+
 			#inputselect {
 				width: 80%;
 				height: 50px;
@@ -41,7 +41,7 @@
 				top: -50px;
 				padding: 0;
 			}
-			
+
 			.newinput {
 				width: 150px;
 				padding: 2px 0px 2px 0px;
@@ -51,11 +51,11 @@
 				box-shadow: 0 1px 0 0 #eee inset;
 				cursor: default;
 			}
-			
+
 			.newinput:focus {
 				cursor: text;
 			}
-			
+
 			.input_div {
 				width: 150px;
 				border: 1px solid #ddd;
@@ -63,12 +63,12 @@
 				border-radius: 0 0 3px 3px;
 				display: none;
 			}
-			
+
 			.soption {
 				display: block;
 				padding: 2px 5px;
 			}
-			
+
 			.soption:hover {
 				background: #f9f9f9;
 				border-top: 1px dotted #ddd;
@@ -163,13 +163,13 @@
 				padding: 0;
 				font-size: 15px;
 			}
-			
+
 			.mui-content div.mui-row li {
 				padding: 5px;
 				list-style: none;
 				height: 30px;
 			}
-			
+
 			.secStyle {
 				margin: 5px 0;
 			}
@@ -185,6 +185,28 @@
 			.inputClass>input {
 				padding: 0;
 				font-size: 10px;
+			}
+
+			.inputClassAdd {
+				font-size: 10px;
+			}
+
+			.inputClassAdd>label {
+				padding: 0;
+			}
+
+			.inputClassAdd>input {
+				padding: 0;
+				font-size: 10px;
+			}
+
+			#hideSpanAdd {
+				position: absolute;
+				right: 77px;
+				top: 49px;
+				border: 1px solid rgb(204, 204, 204);
+				border-left: none;
+				display: none;
 			}
 			
 			#hideSpanAmend {
@@ -220,13 +242,12 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">备货单添加</p>
+			<p class="app_cf app_nav_text_center">备货单修改</p>
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
-				<label>清单编号：</label>
-				<input type="text" class="mui-input-clear" id="" disabled>
-				<font>*</font>
+				<label>备货单号：</label>
+				<input type="text" class="mui-input-clear" id="inPoordNum" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>采购中心：</label>
@@ -241,7 +262,6 @@
 				</div>
 				<font>*</font>
 			</div>
-
 			<div class="mui-input-row">
 				<label>收货时间：</label>
 				<input type="date" class="mui-input-clear" id="inAmendPoLastDa">
@@ -252,64 +272,68 @@
 				<input type="text" class="mui-input-clear" id="inAmendPoLastDa" placeholder="请输入商品货号">
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
-			<div class="mui-row border-btm5">
-				<div class="mui-row mui-checkbox mui-left">
-				    <input style="top: 30px;" name="" type="checkbox">
-				</div>
-				<div class="mui-row">
-					<div class="mui-row">
-						<div class="mui-col-sm-2 mui-col-xs-2"></div>
-						<div class="mui-col-sm-10 mui-col-xs-10">
-							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClass">
-									<label>商品名称:</label>
-									<input type="text" class="mui-input-clear" id="" disabled>
-								</div>
-							</li>
-						</div>
-					</div>
-					<div class="mui-row">
-						<div class="mui-col-sm-2 mui-col-xs-2"></div>
-						<div class="mui-col-sm-5 mui-col-xs-5">
-							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClass">
-									<label>品牌名称:</label>
-									<input type="text" class="mui-input-clear" id="" disabled>
-								</div>
-							</li>
-						</div>
-						<div class="mui-col-sm-5 mui-col-xs-5">
-							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClass">
-									<label>工厂价:</label>
-									<input type="text" class="mui-input-clear" id="" disabled>
-								</div>
-							</li>
-						</div>
-					</div>
-					<div class="mui-row">
-						<div class="mui-col-sm-2 mui-col-xs-2"></div>
-						<div class="mui-col-sm-5 mui-col-xs-5">
-							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClass">
-									<label>商品货号:</label>
-									<input type="text" class="mui-input-clear" id="" disabled>
-								</div>
-							</li>
-						</div>
-						<div class="mui-col-sm-5 mui-col-xs-5">
-							<li class="mui-table-view-cell">
-								<div class="mui-input-row inputClass">
-									<label>申报数量:</label>
-									<input type="text" class="mui-input-clear" placeholder="请输入申报数量" id="">
-								</div>
-							</li>
-						</div>
-					</div>
 
+			<div class="mui-row border-btm5" id="searchInfo">
+				<div class="mui-row border-btm5" id="item1">
+					<div class="mui-row mui-checkbox mui-left">
+						<input style="top: 30px;" name="" type="checkbox">
+					</div>
+					<div class="mui-row">
+						<div class="mui-row">
+							<div class="mui-col-sm-2 mui-col-xs-2"></div>
+							<div class="mui-col-sm-10 mui-col-xs-10">
+								<li class="mui-table-view-cell">
+									<div class="mui-input-row inputClassAdd">
+										<label>商品名称:</label>
+										<input type="text" class="mui-input-clear" id="" disabled>
+									</div>
+								</li>
+							</div>
+						</div>
+						<div class="mui-row">
+							<div class="mui-col-sm-2 mui-col-xs-2"></div>
+							<div class="mui-col-sm-5 mui-col-xs-5">
+								<li class="mui-table-view-cell">
+									<div class="mui-input-row inputClassAdd">
+										<label>品牌名称:</label>
+										<input type="text" class="mui-input-clear" id="" disabled>
+									</div>
+								</li>
+							</div>
+							<div class="mui-col-sm-5 mui-col-xs-5">
+								<li class="mui-table-view-cell">
+									<div class="mui-input-row inputClassAdd">
+										<label>工厂价:</label>
+										<input type="text" class="mui-input-clear" id="" disabled>
+									</div>
+								</li>
+							</div>
+						</div>
+						<div class="mui-row">
+							<div class="mui-col-sm-2 mui-col-xs-2"></div>
+							<div class="mui-col-sm-5 mui-col-xs-5">
+								<li class="mui-table-view-cell">
+									<div class="mui-input-row inputClassAdd">
+										<label>商品货号:</label>
+										<input type="text" class="mui-input-clear" id="" disabled>
+									</div>
+								</li>
+							</div>
+							<div class="mui-col-sm-5 mui-col-xs-5">
+								<li class="mui-table-view-cell">
+									<div class="mui-input-row inputClassAdd">
+										<label>申报数量:</label>
+										<input type="text" class="mui-input-clear" placeholder="请输入申报数量" id="">
+									</div>
+								</li>
+							</div>
+						</div>
+
+					</div>
 				</div>
 				<div class="addBtn">
-					<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">添加</button>
+					<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">添加
+					</button>
 				</div>
 			</div>
 
@@ -317,61 +341,119 @@
 				<div class="labelLf">备货商品：</div>
 			</div>
 
-			<div class="mui-row border-btm5">
-				<div class="mui-row">
-					<div class="mui-col-sm-2 mui-col-xs-2"></div>
-					<div class="mui-col-sm-10 mui-col-xs-10">
-						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClass">
-								<label>商品名称:</label>
-								<input type="text" class="mui-input-clear" id="" disabled>
-							</div>
-						</li>
-					</div>
-				</div>
-				<div class="mui-row">
-					<div class="mui-col-sm-2 mui-col-xs-2"></div>
-					<div class="mui-col-sm-5 mui-col-xs-5">
-						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClass">
-								<label>品牌名称:</label>
-								<input type="text" class="mui-input-clear" id="" disabled>
-							</div>
-						</li>
-					</div>
-					<div class="mui-col-sm-5 mui-col-xs-5">
-						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClass">
-								<label>工厂价:</label>
-								<input type="text" class="mui-input-clear" id="" disabled>
-							</div>
-						</li>
-					</div>
-				</div>
-				<div class="mui-row">
-					<div class="mui-col-sm-2 mui-col-xs-2"></div>
-					<div class="mui-col-sm-5 mui-col-xs-5">
-						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClass">
-								<label>商品货号:</label>
-								<input type="text" class="mui-input-clear" id="" disabled>
-							</div>
-						</li>
-					</div>
-					<div class="mui-col-sm-5 mui-col-xs-5">
-						<li class="mui-table-view-cell">
-							<div class="mui-input-row inputClass">
-								<label>申报数量:</label>
-								<input type="text" class="mui-input-clear" id="" disabled>
-							</div>
-						</li>
-					</div>
-				</div>
-				<div class="addBtn">
-					<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">移除</button>
-				</div>
-			</div>
+			<div class="mui-row border-btm5" id="commodityMenu">
+				<!--<div class="mui-row border-btm5">-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-10 mui-col-xs-10">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>商品名称:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>品牌名称:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>工厂价:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>商品货号:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>申报数量:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="addBtn">-->
+				<!--<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">移除-->
+				<!--</button>-->
+				<!--</div>-->
+				<!--</div>-->
 
+				<!--<div class="mui-row border-btm5">-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-10 mui-col-xs-10">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>商品名称:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>品牌名称:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>工厂价:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="mui-row">-->
+				<!--<div class="mui-col-sm-2 mui-col-xs-2"></div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>商品货号:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--<div class="mui-col-sm-5 mui-col-xs-5">-->
+				<!--<li class="mui-table-view-cell">-->
+				<!--<div class="mui-input-row inputClassAdd">-->
+				<!--<label>申报数量:</label>-->
+				<!--<input type="text" class="mui-input-clear" id="" disabled>-->
+				<!--</div>-->
+				<!--</li>-->
+				<!--</div>-->
+				<!--</div>-->
+				<!--<div class="addBtn">-->
+				<!--<button id="" type="submit" class="addBtnClass app_btn_search mui-btn-blue mui-btn-block">移除-->
+				<!--</button>-->
+				<!--</div>-->
+				<!--</div>-->
+			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
 				<textarea id="inPoRemark" name="" rows="" cols=""></textarea>
@@ -386,6 +468,13 @@
 					<div style="clear:both"></div>
 				</div>
 			</div>
+
+			<div class="mui-input-row">
+                <div class="labelLf">状态流程：</div>
+                <ul class="" id="inCheckAddMenu">
+
+                </ul>
+            </div>
 			<div class="saveBtn">
 				<button id="" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 			</div>
@@ -400,7 +489,3 @@
 	</body>
 
 </html>
-
-
-
-
