--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -147,6 +147,7 @@
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.selectStyle {margin-bottom: 0;}
  			.menuMarg {margin: 0 2px;border-radius:5px;}
+ 			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
 		</style>
 	</head>
 	<body>
