--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -199,7 +199,16 @@
 				padding: 0;
 				font-size: 10px;
 			}
-
+			.inputClassAdd>label.commodityName {
+				padding: 0;
+			    width: 15%;
+			}
+			.inputClassAdd>input.commodityTxt {
+				padding: 0;
+			    font-size: 10px;
+			    position: relative;
+			    width: 85%;
+			}
 			#hideSpanAdd {
 				position: absolute;
 				right: 77px;
@@ -232,8 +241,7 @@
 			}
 			
 			.mui-input-row .mui-input-clear~.mui-icon-clear {
-				right: 5px;
-				top: -6px;
+				display: none;
 			}
 			
 		</style>
@@ -285,7 +293,7 @@
 								<li class="mui-table-view-cell">
 									<div class="mui-input-row inputClassAdd">
 										<label>商品名称:</label>
-										<input type="text" class="mui-input-clear" id="" disabled>
+										<input type="text" class="mui-input-clear commodityName" id="" disabled>
 									</div>
 								</li>
 							</div>
