--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -28,9 +28,9 @@
 			.sucessColor {
 				color: #40ABE9;
 			}
-			#commodity {font-size: 13px;}
-			#commodity div.mui-input-row>input {padding: 0;font-size: 13px;}
-			#commodity div.mui-input-row>label {padding: 0;}
+			.commodity {font-size: 13px;}
+			.commodity div.mui-input-row>input {padding: 0;font-size: 13px;}
+			.commodity div.mui-input-row>label {padding: 0;}
 			.photoParent {width: 15%;height: 220px;margin-right: 15px;}
 			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
 			.mui-input-group .mui-input-row:after {background-color: #ececec;}
@@ -91,7 +91,6 @@
 			</div>
 			
 		</div>
-		<input id="inStatus" name="inStatus" type="hidden" />
 		<div class="clear"></div>
 
 		<script src="../../js/component/mui.min.js"></script>
