--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -274,8 +274,8 @@
 				<input type="date" class="mui-input-clear" id="inPoLastDa">
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
-				<label>选择商品：</label>
-				<input type="text" class="mui-input-clear" id="inAmendPoLastDa" placeholder="请输入商品货号">
+				<label class="commodityName">选择商品：</label>
+				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入商品货号">
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
 
@@ -467,8 +467,8 @@
 			<div class="mui-input-row">
 				<label>业务状态：</label>
 				<div class="pre">
-					<select class="secStyle" name="" id="input_div_Amend">
-						<option value=""></option>
+					<select class="secStyle" name="" id="inputDivAmend">
+
 					</select>
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
