--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -84,7 +84,7 @@
 			<button id="inRejectBtn" type="submit" class="mui-btn mui-btn-blue">审核驳回</button>
 		</div>
 	<div class="clear"></div>
-	<input type="hidden" name="codeId" id="codeId" value="" />
+	<input type="hidden" name="currentType" id="currentType" value="" />
 	
 	
 	
