--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -156,7 +156,8 @@
 				color: red;
 				position: absolute;
 				right: 60px;
-				top: 30%;
+				top: 38%;
+				font-size: 20px;
 			}
 			
 			.addBtnClass {
@@ -233,8 +234,18 @@
 			}
 			
 			.mui-input-row .mui-input-clear~.mui-icon-clear {
-				right: 5px;
-				top: -6px;
+				right: 4.5em;
+    			top: 10px;
+			}
+			.inputClassAdd label {
+				color:#40ABE9;
+			}
+			.inputClassAdd font {
+				color: red;
+			    position: absolute;
+			    right: 5px;
+			    top: 10%;
+			    font-size: 20px;
 			}
 		</style>
 	</head>
