--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -148,6 +148,7 @@
  			.selectStyle {margin-bottom: 0;}
  			.menuMarg {margin: 0 2px;border-radius:5px;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
+ 			.footClass {background-color: #40ABE9;}    
 		</style>
 	</head>
 	<body>
@@ -156,11 +157,22 @@
 		    <span id="searchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">备货单管理</p>
 		</header>
+		<nav class="mui-bar mui-bar-tab footClass" id="nav">
+			<a class="mui-tab-item app_cf inHomePage">
+				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-tab-label">返回首页</span>
+			</a>
+			<a class="mui-tab-item app_cf inAddBtn">
+				<span class="mui-icon mui-icon-plus"></span>
+				<span class="mui-tab-label">添加备货单</span>
+			</a>
+		</nav>
 		<div class="content mui-content">
 			<div class="inListAdd listBlue">
 				
 			</div>
 		</div>
+		
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
