--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -150,6 +150,7 @@
  			.menuMarg {margin: 0 2px;border-radius:5px;}
  			#searchBtn {background-color: #374761;padding: 30px;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
+ 			.footClass {background-color: #40ABE9;} 
 		</style>
 	</head>
 
@@ -159,6 +160,12 @@
 			<span id="search_btn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">采购单管理</p>
 		</header>
+		<nav class="mui-bar mui-bar-tab footClass" id="purchaseNav">
+			<a class="mui-tab-item app_cf inHomePage">
+				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-tab-label">返回首页</span>
+			</a>
+		</nav>
 		<div class="content mui-content">
 			<div class="listBlue" id="addBtn">
 				
