--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -35,6 +35,7 @@
 			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
 			.mui-input-group .mui-input-row:after {background-color: #ececec;}
 			.listBlue>li {border-bottom: 1px solid #40ABE9;}
+			#inCheckAddMenu>li:last-child {color: #40ABE9;}
 		</style>
 	</head>
 
