--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/ApplyPayList.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/ApplyPayList.html
@@ -12,9 +12,9 @@
 			.mui-input-row label {padding: 14px 14px;}
 			#Date {text-indent: 30px;}
 			#processAjaxBtn {left: 50%;margin-left: -41px;background-color: #0d84f2;}
-			#addPayListBtn>div {border-bottom: 2px solid #40ABE9;}
 			.hintTxt {font-family: cursive;text-align: center;}
 			.app_p20 button {margin-left: 17%;background-color: #007aff;color: #fff;}
+			.mui-input-group .mui-input-row {border-radius: 0;}
 		</style>
 	</head>
 	<body>
