--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -97,7 +97,7 @@
 					<input type="text" class="ordNum" placeholder="请输入采购单号">
 				</div>
 				<div class="mui-input-row">
-					<label>订单/备货清单编号：</label>
+					<label>订单编号：</label>
 					<input type="text" class="detaNum" placeholder="请输入订单/备货清单编号">
 				</div>
 				<div class="mui-input-row">
@@ -123,9 +123,9 @@
 					</div>
 				</div>
 			</form>
-			<div class="puSearchBtn">
-				<button id="puSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
-			</div>
+		</div>
+		<div class="puSearchBtn">
+			<button id="puSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
