--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -172,7 +172,7 @@
             border: none;
             border-radius: 8px;
         }
-        #quitBtn {position: fixed;bottom: 5%;width: 300px;left: 50%;margin-left: -150px;}
+        #quitBtn {width: 80%;margin: 50px auto;}
     </style>
 </head>
 <body>
