--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
@@ -40,27 +40,13 @@
 				<div class="mui-input-row">
 					<label>支付方式：</label>
 				</div>
-				<!--<li class="mui-table-view-cell">
-					<img class="mui-pull-left pay-logo" src="../../images/wx-logo.jpg">
-					<div class="mui-pull-right pay-txt">
-						微信支付
-						<input class="payMode" id="wxChoice" value="1" type="radio" name="apply" />
-					</div>
-				</li>
-				<li class="mui-table-view-cell">
-					<img class="mui-pull-left pay-logo" src="../../images/zfb-logo.jpg">
-					<div class="mui-pull-right pay-txt">
-						支付宝
-						<input class="payMode" id="zfbChoice" value="0" type="radio" name="apply" />
-					</div>
-				</li>-->
-				<li class="mui-table-view-cell">
+				<li id="wxPayBtn" class="mui-table-view-cell">
 					<img class="mui-pull-left pay-logo" src="../../images/wx-logo.jpg">
 					<div class="mui-pull-right pay-txt">
 						 <a class="mui-navigate-right">微信支付</a>
 					</div>
 				</li>
-				<li class="mui-table-view-cell">
+				<li id="zfbPayBtn" class="mui-table-view-cell">
 					<img class="mui-pull-left pay-logo" src="../../images/zfb-logo.jpg">
 					<div class="mui-pull-right pay-txt">
 						 <a class="mui-navigate-right">支付宝</a>
