--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -81,7 +81,14 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
-			#inHideSpan {position: absolute;right: 77px;top: 49px;border: 1px solid rgb(204, 204, 204);border-left: none;display: none;}
+			#inHideSpan {
+			    position: absolute;
+			    right: 52px;
+			    top: 11px;
+			    border: 1px solid rgb(204, 204, 204);
+			    border-radius: 13px;
+				display: none;
+			}
 		</style>
 	</head>
 
