--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -211,20 +211,20 @@
 			    width: 84%;
 			}
 			#hideSpanAdd {
-				position: absolute;
-				right: 77px;
-				top: 49px;
-				border: 1px solid rgb(204, 204, 204);
-				border-left: none;
+			    position: absolute;
+			    right: 52px;
+			    top: 11px;
+			    border: 1px solid rgb(204, 204, 204);
+			    border-radius: 13px;
 				display: none;
 			}
 			
 			#hideSpanAmend {
 				position: absolute;
-				right: 77px;
-				top: 49px;
+				right: 52px;
+				top: 11px;
 				border: 1px solid rgb(204, 204, 204);
-				border-left: none;
+				border-radius: 13px;
 				display: none;
 			}
 			
