--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -211,11 +211,11 @@
 			}
 			
 			#hideSpanAdd {
-				position: absolute;
-				right: 77px;
-				top: 49px;
-				border: 1px solid rgb(204, 204, 204);
-				border-left: none;
+			    position: absolute;
+			    right: 52px;
+			    top: 11px;
+			    border: 1px solid rgb(204, 204, 204);
+			    border-radius: 13px;
 				display: none;
 			}
 			
@@ -259,6 +259,7 @@
 				<label>采购中心：</label>
 				<div class="pre">
 					<input class="newinput" type="text" placeholder="请选择采购中心">
+					<font>*</font>
 					<span class="mui-icon mui-icon-closeempty" id="hideSpanAdd"></span>
 					<div class="input_div" style="display: none;">
 
@@ -266,7 +267,7 @@
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
-				<font>*</font>
+				
 			</div>
 
 			<div class="mui-input-row">
