--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -7,25 +8,30 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link href="../css/app.css" rel="stylesheet" />
 		<style>
-			.mui-table-view-cell p {margin-bottom: 5px;}
+			.mui-table-view-cell p {
+				border-bottom: 1px solid #e8e8e8;
+				padding: 8px 0 8px;
+			}
 		</style>
 	</head>
+
 	<body>
-		 <header class="mui-bar mui-bar-nav">  
-            <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-            <h1 class="mui-title">运营管理</h1>  
-       	</header> 
-		<div class="mui-content">  
-            <div class="mui-card">  
-                <ul class="mui-table-view font-color" id="menuMaget">  
-					
-                </ul>  
-            </div>
-		</div>  
+		<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
+			<h1 class="mui-title">运营管理</h1>
+		</header>
+		<div class="mui-content">
+			<div class="mui-card">
+				<ul class="mui-table-view font-color" id="menuMaget">
+
+				</ul>
+			</div>
+		</div>
 		<script src="../js/component/mui.min.js"></script>
-	<script src="../js/component/zepto.min.js"></script>
-	<script src="../js/component/GHutils.js"></script>
+		<script src="../js/component/zepto.min.js"></script>
+		<script src="../js/component/GHutils.js"></script>
 		<script src="../js/management.js"></script>
-        
+
 	</body>
+
 </html>
