--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>备货单查询</title>
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<title>订单信息查询</title>
+		<link href="../../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../../css/app.css" rel="stylesheet" />
 		<style>
 			.pre {
 				margin-bottom: 0;
@@ -15,7 +14,7 @@
 				width: 67%;
 			}
 			
-			.inSearchBtnClass {
+			.staOrdSechBtnClass {
 				margin: 60px auto;
 				width: 80%;
 			}
@@ -55,7 +54,7 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
-			#inHideSpan {
+			.staHideSpan {
 			    position: absolute;
 			    right: 52px;
 			    top: 11px;
@@ -65,46 +64,35 @@
 			}
 		</style>
 	</head>
-
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">备货单查询</p>
+			<p class="app_cf app_nav_text_center">订单信息查询</p>
 		</header>
 		<div class="mui-content menuMarg">
 			<form class="mui-input-group app_bline">
 				<div class="mui-input-row">
-					<label>备货单号：</label>
-					<input type="text" class="inOrdNum" placeholder="请输入备货单号">
-				</div>
-				<div class="mui-input-row">
-					<label>供应商：</label>
-					<input type="text" class="inReqNum" placeholder="请输入供应商">
+					<label>订单编号：</label>
+					<input type="text" class="inReqNum" placeholder="请输入订单编号">
 				</div>
 				<div class="mui-input-row">
 					<label>采购中心：</label>
-					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择采购中心">
-						<span class="mui-icon mui-icon-closeempty" id="inHideSpan"></span>
-						<div class="input_div" style="display: none;">
-							
-						</div>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
+					<input type="text" class="inReqNum" placeholder="请输入采购中心">
 				</div>
 				<div class="mui-input-row">
-					<label>业务状态：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_business">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
+					<label>经销店电话：</label>
+					<input type="text" class="inReqNum" placeholder="请输入电话">
 				</div>
 				<div class="mui-input-row">
-					<label>品类名称：</label>
+					<label>商品货号：</label>
+					<input type="text" class="inReqNum" placeholder="请输入商品货号">
+				</div>
+				<div class="mui-input-row">
+					<label>客户专员：</label>
+					<input type="text" class="inReqNum" placeholder="请输入客户专员">
+				</div>
+				<div class="mui-input-row">
+					<label>订单状态：</label>
 					<div class="pre">
 						<select class="secStyle" name="" id="input_div_class">
 							<option value=""></option>
@@ -113,15 +101,26 @@
 						<div style="clear:both"></div>
 					</div>
 				</div>
+				<div class="mui-input-row">
+					<label>经销店名称：</label>
+					<div class="pre">
+						<input class="newinput" type="text" placeholder="请选择经销店">
+						<span class="mui-icon mui-icon-closeempty staHideSpan" id="cpySchHideSpan"></span>
+						<div class="input_div" style="display: none;">
+							
+						</div>
+						<input class="savedata" type="hidden" value=''>
+						<div style="clear:both"></div>
+					</div>
+				</div>
 			</form>
 		</div>
-		<div class="inSearchBtnClass">
-			<button id="inSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
+		<div class="staOrdSechBtnClass">
+			<button id="staOrdSechBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
 		</div>
-		<script src="../../js/component/zepto.min.js"></script>
-		<script src="../../js/component/mui.min.js"></script>
-		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inSearch.js"></script>
+		<script src="../../../js/component/zepto.min.js"></script>
+		<script src="../../../js/component/mui.min.js"></script>
+		<script src="../../../js/component/GHutils.js"></script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdSech.js"></script>
 	</body>
-
 </html>
