--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
-		<title>备货单管理</title>
+		<title>客户专员管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<link href="../../css/drop.css" rel="stylesheet" />
@@ -48,21 +48,21 @@
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-		    <span id="searchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
-		    <p class="app_cf app_nav_text_center">备货单管理</p>
+		    <span id="staffSearchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
+		    <p class="app_cf app_nav_text_center">客户专员管理</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
-			<a class="mui-tab-item app_cf inHomePage">
+			<a class="mui-tab-item app_cf staHomePage">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">返回首页</span>
 			</a>
-			<a class="mui-tab-item app_cf inAddBtn">
+			<a class="mui-tab-item app_cf staAddBtn">
 				<span class="mui-icon mui-icon-plus"></span>
-				<span class="mui-tab-label">添加备货单</span>
+				<span class="mui-tab-label">用户添加</span>
 			</a>
 		</nav>
 		<div class="content mui-content">
-			<div class="inListAdd listBlue">
+			<div class="staffList listBlue">
 				
 			</div>
 		</div>
@@ -70,6 +70,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
 		<script src="../../js/component/dropload.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryList.js"></script>
+		<script src="../../js/staffMgmtJs/staffList.js"></script>
 	</body>
 </html>
