--- a/src/main/webapp/static/mobile/html/memberMgmtHtml/memberAdd.html
+++ b/src/main/webapp/static/mobile/html/memberMgmtHtml/memberAdd.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>备货单添加</title>
+		<title>机构添加</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
@@ -50,15 +51,6 @@
 			
 			.mui-input-row label {
 				padding: 14px 14px;
-			}
-			
-			.comChoiceBtn {
-				padding: 5px;
-				border: none;
-				width: 50px;
-				position: absolute;
-				right: 10px;
-				top: 6px;
 			}
 			
 			.addBtn {
@@ -145,16 +137,17 @@
 			}
 		</style>
 	</head>
+
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">备货单添加</p>
+			<p class="app_cf app_nav_text_center">机构添加</p>
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
-				<label>采购中心：</label>
+				<label>上级机构：</label>
 				<div class="pre">
-					<input class="newinput" type="text" placeholder="请选择采购中心">
+					<input class="newinput" type="text" placeholder="请选择经销店">
 					<font>*</font>
 					<span class="mui-icon mui-icon-closeempty" id="hideSpanAdd"></span>
 					<div class="input_div" style="display: none;">
@@ -165,33 +158,29 @@
 				</div>
 			</div>
 			<div class="mui-input-row">
-				<label>收货时间：</label>
-				<input type="date" class="mui-input-clear" id="inPoLastDa">
+				<label>归属区域：</label>
+				<div class="pre">
+					<input class="newinput" type="text" placeholder="请选择市辖区">
+					<font>*</font>
+					<span class="mui-icon mui-icon-closeempty" id="hideSpanAdd"></span>
+					<div class="input_div" style="display: none;">
+
+					</div>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+			</div>
+			<div class="mui-input-row">
+				<label>机构名称：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
 				<font>*</font>
 			</div>
-			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
-				<label class="commodityName">选择商品：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入商品货号">
-				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
-			</div>
-			<div class="mui-row border-btm5" id="searchInfo">
-
-			</div>
-
-			<div class="mui-row">
-				<div class="labelLf">备货商品：</div>
-			</div>
-
-			<div class="mui-row border-btm5" id="commodityMenu">
-
-			</div>
-
 			<div class="mui-input-row">
-				<label>备注：</label>
-				<textarea id="inPoRemark" name="" rows="" cols=""></textarea>
+				<label>机构编码：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
 			</div>
 			<div class="mui-input-row">
-				<label>业务状态：</label>
+				<label>机构类型：</label>
 				<div class="pre">
 					<select class="secStyle" name="" id="inputDivAdd">
 						<option value=""></option>
@@ -200,8 +189,88 @@
 					<div style="clear:both"></div>
 				</div>
 			</div>
+			<div class="mui-input-row">
+				<label>机构级别：</label>
+				<div class="pre">
+					<select class="secStyle" name="" id="inputDivAdd">
+						<option value=""></option>
+					</select>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+			</div>
+			<div class="mui-input-row">
+				<label>是否可用：</label>
+				<div class="pre">
+					<select class="secStyle" name="" id="inputDivAdd">
+						<option value=""></option>
+					</select>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+			</div>
+			<div class="mui-input-row">
+				<label>钱包账户：</label>
+				<div class="pre">
+					<select class="secStyle" name="" id="inputDivAdd">
+						<option value=""></option>
+					</select>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+			</div>
+			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
+				<label class="commodityName">主负责人：</label>
+				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请选择主负责人">
+				<button id="mainHeadBtn" type="submit" class="mainHead mui-btn-blue mui-btn-block">添加新负责人</button>
+			</div>
+			<div class="mui-input-row">
+				<label>副负责人：</label>
+				<div class="pre">
+					<input class="newinput" type="text" placeholder="请选择副负责人">
+					<font>*</font>
+					<span class="mui-icon mui-icon-closeempty" id="hideSpanAdd"></span>
+					<div class="input_div" style="display: none;">
+
+					</div>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+			</div>
+			<div class="mui-input-row">
+				<label>联系地址：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>邮政编码：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>负责人：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>电话：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>传真：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>邮箱：</label>
+				<input type="text" class="mui-input-clear" id="inPoLastDa">
+			</div>
+			<div class="mui-input-row">
+				<label>备注：</label>
+				<textarea id="membRemark" name="" rows="" cols=""></textarea>
+			</div>
+			<div class="mui-input-row">
+				<label>快速添加下级部门：</label>
+				
+			</div>
 		</div>
-		<div class="saveBtn">
+		<div class="inSaveBtn saveBtn">
 			<button id="inSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<div class="clear"></div>
@@ -209,7 +278,7 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryAddList.js"></script>
+		<script src="../../js/memberMgmtJs/memberAdd.js"></script>
 	</body>
 
 </html>
