--- a/src/main/webapp/static/mobile/html/memberMgmtHtml/memberList.html
+++ b/src/main/webapp/static/mobile/html/memberMgmtHtml/memberList.html
@@ -6,36 +6,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
-		<title>备货单管理</title>
+		<title>会员管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<link href="../../css/drop.css" rel="stylesheet" />
     	<style type="text/css">
-			* {
-				margin: 0;
-				padding: 0;
-				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-				-webkit-text-size-adjust: none;
-			}
-			html {
-				font-size: 10px;
-			}
-			body {
-				background-color: #fff;
-			}
-			.header {
-				height: 44px;
-				line-height: 44px;
-				border-bottom: 1px solid #ccc;
-				background-color: #40ABE9;
-			}
-			.content {
-				padding-bottom: 40px;
-				background-color: #fff;
-			}
-			.dropload-down{
-				display: none;
-			}
+			* {margin: 0;padding: 0;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);-webkit-text-size-adjust: none;}
+			html {font-size: 10px;}
+			body {background-color: #fff;}
+			.header {height: 44px;line-height: 44px;border-bottom: 1px solid #ccc;background-color: #40ABE9;}
+			.content {padding-bottom: 40px;background-color: #fff;}
+			.dropload-down{display: none;}
 			.mui-content li {padding: 0;list-style: none;height: 30px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
@@ -48,28 +29,31 @@
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-		    <span id="searchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
-		    <p class="app_cf app_nav_text_center">备货单管理</p>
+		    <span id="membSearchBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
+		    <p class="app_cf app_nav_text_center">会员管理</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
-			<a class="mui-tab-item app_cf inHomePage">
+			<a class="mui-tab-item app_cf membHomePage">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">返回首页</span>
 			</a>
-			<a class="mui-tab-item app_cf inAddBtn">
+			<a class="mui-tab-item app_cf membAddBtn">
 				<span class="mui-icon mui-icon-plus"></span>
-				<span class="mui-tab-label">添加备货单</span>
+				<span class="mui-tab-label">机构添加</span>
 			</a>
 		</nav>
 		<div class="content mui-content">
-			<div class="inListAdd listBlue">
+			<div class="membListAdd listBlue">
 				
 			</div>
 		</div>
+		
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
 		<script src="../../js/component/dropload.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryList.js"></script>
+		<script src="../../js/orderMgmtJs/orderList.js"></script>
+
 	</body>
+
 </html>
