--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>备货单查询</title>
+		<title>客户专员查询</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style>
@@ -55,7 +54,7 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
-			#inHideSpan {
+			.staHideSpan {
 			    position: absolute;
 			    right: 52px;
 			    top: 11px;
@@ -69,23 +68,15 @@
 	<body>
 		<header class="header mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">备货单查询</p>
+			<p class="app_cf app_nav_text_center">客户专员查询</p>
 		</header>
 		<div class="mui-content menuMarg">
 			<form class="mui-input-group app_bline">
 				<div class="mui-input-row">
-					<label>备货单号：</label>
-					<input type="text" class="inOrdNum" placeholder="请输入备货单号">
-				</div>
-				<div class="mui-input-row">
-					<label>供应商：</label>
-					<input type="text" class="inReqNum" placeholder="请输入供应商">
-				</div>
-				<div class="mui-input-row">
-					<label>采购中心：</label>
+					<label>归属公司：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择采购中心">
-						<span class="mui-icon mui-icon-closeempty" id="inHideSpan"></span>
+						<input class="newinput" type="text" placeholder="请选择归属公司">
+						<span class="mui-icon mui-icon-closeempty staHideSpan" id="cpySchHideSpan"></span>
 						<div class="input_div" style="display: none;">
 							
 						</div>
@@ -94,24 +85,28 @@
 					</div>
 				</div>
 				<div class="mui-input-row">
-					<label>业务状态：</label>
+					<label>归属部门：</label>
 					<div class="pre">
-						<select class="secStyle" name="" id="input_div_business">
-							<option value=""></option>
-						</select>
+						<input class="newinput" type="text" placeholder="请选择归属部门">
+						<span class="mui-icon mui-icon-closeempty staHideSpan" id="dptmtSchHideSpan"></span>
+						<div class="input_div" style="display: none;">
+							
+						</div>
 						<input class="savedata" type="hidden" value=''>
 						<div style="clear:both"></div>
 					</div>
 				</div>
 				<div class="mui-input-row">
-					<label>品类名称：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_class">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
+					<label>登录名：</label>
+					<input type="text" class="inReqNum" placeholder="请输入登录名">
+				</div>
+				<div class="mui-input-row">
+					<label>姓名：</label>
+					<input type="text" class="inReqNum" placeholder="请输入姓名">
+				</div>
+				<div class="mui-input-row">
+					<label>手机：</label>
+					<input type="text" class="inReqNum" placeholder="请输入手机号">
 				</div>
 			</form>
 		</div>
@@ -121,7 +116,6 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inSearch.js"></script>
+		<script src="../../js/staffMgmtJs/staSearch.js"></script>
 	</body>
-
 </html>
