--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
@@ -21,7 +21,7 @@
 			<p class="app_cf app_nav_text_center">付款</p>
 		</header>
 		<div class="mui-content">
-			<div class="mui-input-group border-btm5">
+			<div class="mui-input-group app_bline2">
 				<div class="mui-input-row">
 					<label>应付金额：</label>
 					<input id="shouldPay" type="text" class="ordNum" disabled>
@@ -32,7 +32,7 @@
 					<font>*</font>
 				</div>
 			</div>
-			<ul class="mui-table-view border-btm5">
+			<ul class="mui-table-view app_bline2">
 				<div class="mui-input-row">
 					<label>支付方式：</label>
 				</div>
