--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -174,7 +174,7 @@
 				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入商品货号">
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
-			<div class="mui-row border-btm5" id="searchInfo">
+			<div class="mui-row app_bline2" id="searchInfo">
 
 			</div>
 
@@ -182,7 +182,7 @@
 				<div class="labelLf">备货商品：</div>
 			</div>
 
-			<div class="mui-row border-btm5" id="commodityMenu">
+			<div class="mui-row app_bline2" id="commodityMenu">
 
 			</div>
 
