--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/details.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/details.html
@@ -38,18 +38,9 @@
 			        <input type="text" class="mui-input-clear" id="PotoDel" disabled>
 			    </div>
 			    <div class="mui-input-row">
-			        <label>最后付款时间：</label>
+			        <label>截止时间：</label>
 			        <input type="text" class="mui-input-clear" id="PoLastDa" disabled>
 			    </div>
-<!--			    <div class="mui-input-row">
-					<label>交货地点：</label>
-			    	<div class="labelri">
-				    	采购中心
-				        <input disabled checked type="radio" name="site" />
-			        	供应商
-				        <input disabled type="radio" name="site" />
-			    	</div>
-			    </div>-->
 			    <div class="mui-input-row">
 			    	<label>备注：</label>
 			        <textarea id="PoRemark" name="" rows="" cols="" disabled></textarea>
@@ -82,54 +73,6 @@
 			        <label>身份证：</label>
 			        <input type="text" class="mui-input-clear" id="" disabled>
 			    </div>
-			    
-<!--附加信息块 有的话显示-->		
-				<!--<div class="mui-input-row">
-					<div class="mui-input-row">
-						<label>产品图片：</label>
-				        <div class="photoList">
-				         	<img class="labelPto" src="../images/wht-logo.png"/>
-					    </div>
-					</div>
-	   			    <div class="mui-input-row priceList">
-					    <div class="mui-input-row">
-					        <label>品牌名称：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>商品名称：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>商品货号：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>所属单号：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>采购数量：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>已供货数量：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-					    <div class="mui-input-row">
-					        <label>工厂价：</label>
-					        <input type="text" class="mui-input-clear" disabled>
-					    </div>
-				    </div>
-			    </div>-->
-			    <!--<div class="mui-input-row">
-			        <label>申请金额：</label>
-			        <input id="planPayDetails" type="text" class="mui-input-clear" disabled>
-			    </div>
-			    <div class="mui-input-row">
-			        <label>本次申请付款时间：</label>
-			        <input id="nowDateDetails" type="text" name="" disabled/>
-			    </div>-->
 <!--审批流程块 有的话显示-->
 			    <div class="mui-input-row">
 					<div class="labelLf">审批流程：</div>
