--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -195,7 +195,7 @@
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
 
-			<div class="mui-row border-btm5" id="searchInfo">
+			<div class="mui-row app_bline2" id="searchInfo">
 
 			</div>
 
@@ -203,7 +203,7 @@
 				<div class="labelLf">备货商品：</div>
 			</div>
 
-			<div class="mui-row border-btm5" id="commodityMenu">
+			<div class="mui-row app_bline2" id="commodityMenu">
 
 			</div>
 			<div class="mui-input-row">
