--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -96,7 +96,7 @@
 			<p class="app_cf app_nav_text_center">采购单查询</p>
 		</header>
 		<div class="mui-content menuMarg">
-			<form class="mui-input-group app_bline">
+			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>采购单号：</label>
 					<input type="text" class="ordNum" placeholder="请输入采购单号">
