--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -18,6 +18,46 @@
 			.photoParent img {top: 50%;margin-top: -8px;width: 50px;}
 			.listBlue>li {border-bottom: 1px solid #40ABE9;}
 			#staEvoMenu>li:last-child {color: #40ABE9;}
+			.mui-table-view-cell {
+				border-bottom: 1px solid #efeff4;
+			}
+			.mui-content div.mui-row li {
+				padding: 5px;
+				list-style: none;
+				height: 30px;
+			}
+			.inputClass {
+				font-size: 10px;
+			}
+
+			.inputClass>label {
+				padding: 0;
+			}
+
+			.inputClass>input {
+				padding: 0;
+				font-size: 10px;
+			}
+			.inputClass>label.commodityName {
+				padding: 0;
+			    width: 15%;
+			}
+			.inputClass>input.commodityTxt {
+				padding: 0;
+			    font-size: 10px;
+			    position: relative;
+			    width: 84%;
+			}
+			.inputClass font {
+				color: red;
+			    position: absolute;
+			    right: 5px;
+			    top: 10%;
+			    font-size: 20px;
+			}
+			.inputClass label {
+				color:#40ABE9;
+			}
 		</style>
 	</head>
 	<body>
