--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, user-scalable=0, minimal-ui" charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
@@ -17,25 +16,11 @@
 				-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 				-webkit-text-size-adjust: none;
 			}
-			html {
-				font-size: 10px;
-			}
-			body {
-				background-color: #fff;
-			}
-			.header {
-				height: 44px;
-				line-height: 44px;
-				border-bottom: 1px solid #ccc;
-				background-color: #40ABE9;
-			}
-			.content {
-				padding-bottom: 40px;
-				background-color: #fff;
-			}
-			.dropload-down{
-				display: none;
-			}
+			html {font-size: 10px;}
+			body {background-color: #fff;}
+			.header {height: 44px;line-height: 44px;border-bottom: 1px solid #ccc;background-color: #40ABE9;}
+			.content {padding-bottom: 40px;background-color: #fff;}
+			.dropload-down{display: none;}
 			.mui-content li {padding: 0;list-style: none;height: 30px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
