--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -72,7 +72,7 @@
 			<p class="app_cf app_nav_text_center">备货单查询</p>
 		</header>
 		<div class="mui-content menuMarg">
-			<form class="mui-input-group app_bline">
+			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>备货单号：</label>
 					<input type="text" class="inOrdNum" placeholder="请输入备货单号">
