--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -61,7 +61,7 @@
 				<span class="mui-tab-label">添加备货单</span>
 			</a>
 		</nav>
-		<div class="content mui-content">
+		<div class="content mui-content" id="refreshContainer">
 			<div class="inListAdd listBlue">
 				
 			</div>
