--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -9,7 +9,7 @@
 		<title>备货单管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
-		<link href="../../css/drop.css" rel="stylesheet" />
+		<!--<link href="../../css/drop.css" rel="stylesheet" />-->
     	<style type="text/css">
 			* {
 				margin: 0;
@@ -37,12 +37,19 @@
 				display: none;
 			}
 			.mui-content li {padding: 0;list-style: none;height: 30px;}
+			.mui-content ul li {padding: 0;list-style: none;height: 30px;width:60px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
  			.listBlue>div {border-bottom: 1px solid #40ABE9;}
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
- 			.footClass {background-color: #40ABE9;}    
+ 			.footClass {background-color: #40ABE9;} 
+ 			#refreshContainer{
+				touch-action: none;
+			}  
+			.mui-table-view-chevron .mui-table-view-cell {
+			     padding-right: 0px; 
+			} 
 		</style>
 	</head>
 	<body>
@@ -61,9 +68,11 @@
 				<span class="mui-tab-label">添加备货单</span>
 			</a>
 		</nav>
-		<div class="content mui-content" id="refreshContainer">
-			<div class="inListAdd listBlue">
-				
+		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<div class="inListAdd listBlue mui-scroll">
+				<ul class="mui-table-view mui-table-view-chevron" id="list">
+                        
+                </ul>
 			</div>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
