--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -78,7 +78,7 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/component/dropload.js"></script>
+		<!--<script src="../../js/component/dropload.js"></script>-->
 		<script src="../../js/inventoryMagmetJs/inventoryList.js"></script>
 	</body>
 </html>
