--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -34,7 +34,12 @@
 				padding-bottom: 40px;
 				background-color: #fff;
 			}
-			.dropload-down{display: none;}
+			.dropload-down{display: none;}		    
+			.dropload-refresh{
+				background: red;
+				width:100%;
+				text-align: center;
+			}
 			.mui-content div.content_part li {padding: 0;list-style: none;height: 30px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
