--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/purchase.html
@@ -49,6 +49,12 @@
  			#searchBtn {background-color: #374761;padding: 30px;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;} 
+ 			#refreshContainer{
+				touch-action: none;
+			}  
+			.mui-table-view-chevron .mui-table-view-cell {
+			     padding-right: 0px; 
+			}
 		</style>
 	</head>
 
@@ -64,9 +70,11 @@
 				<span class="mui-tab-label">返回首页</span>
 			</a>
 		</nav>
-		<div class="content mui-content">
-			<div class="listBlue" id="addBtn">
-				
+		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<div class="listBlue mui-scroll" id="addBtn">
+				<ul class="mui-table-view mui-table-view-chevron" id="list">
+                        
+                </ul>
 			</div>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
