--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -50,11 +50,9 @@
 			.mui-table-view-chevron .mui-table-view-cell {
 			     padding-right: 0px; 
 			} 
-			/*.mui-pull-bottom-pocket {
-			    position: fixed;
-			    bottom: 0px;
-			    height: 60px;
-			}*/
+			.listBlue>div {
+			     border-bottom: 1px solid #fff; 
+			}
 		</style>
 	</head>
 	<body>
