--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -46,9 +46,11 @@
 				<span class="mui-tab-label">用户添加</span>
 			</a>
 		</nav>
-		<div class="content mui-content">
-			<div class="staffList listBlue">
-				
+		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<div class="staffList listBlue mui-scroll">
+				<ul class="mui-table-view mui-table-view-chevron" id="list">
+                        
+                </ul>
 			</div>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
